--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,12 @@ edition = "2024"
 description = "train a simple neural network on mnist dataset using burn."
 license = "MIT"
 
-[profile.dev.package."*"]
-opt-level = 2
+# [profile.dev.package."*"]
+# opt-level = 2
 
 [dependencies]
 burn = { version = "0.18.0", features = ["train", "vision", "dataset", "wgpu"] }
+clap = { version = "4.5.41", features = ["derive"] }
 nalgebra = "0.33.2"
 ndarray = "0.16.1"
 rand = "0.9.1"
