--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ license = "MIT"
 opt-level = 2
 
 [dependencies]
-burn = { version = "0.18.0", features = ["train", "ndarray", "vulkan"] }
-clap = { version = "4.5.41", features = ["derive"] }
+# version = "0.19.0"
+burn = {git = "https://github.com/tracel-ai/burn", branch = "main", features = ["train", "ndarray", "vulkan"] }
+clap = { version = "4.5", features = ["derive"] }
 log = "0.4.27"
 nalgebra = "0.33.2"
 ndarray = "0.16.1"
 rand = "0.9.1"
-serde_json = "1.0.141"
+serde_json = "1.0"
 stl_io = "0.8.5"
